<resources>
    <string name="app_name">Oferfast</string>
    <string name="oferta_edit_title">Editar Oferta</string>
    <string name="oferta_reg_title">Registrar Usuario</string>
    <!-- Textos Login -->
    <string name="user_input_login">Usuario</string>
    <string name="pass_input_login">Contraseña</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="title_activity_logining">Iniciando Sesión...</string>
    <string name="no_acount_login">¿No tienes Cuenta?, Regístrate</string>
    <string name="missing_value_login">Debes llenar todos los campos</string>
    <!--Textos de registro-->
    <string name="user_input_reg">Nombre de Usuario</string>
    <string name="email_input_reg">Email</string>
    <string name="pass_input_reg">Contraseña</string>
    <string name="rpass_input_reg">Repita la Contraseña</string>
    <string name="reg_btn">Registrarse</string>
    <string name="hav_acount_reg">¿Ya tienes Cuenta?, Inicia Sesión</string>
    <string name="title_activity_registro">Registro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="delete">-</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Prontamente, Perfil de usuario</string>

    <!-- textos para editar-->
    <string name="edit_title_hint">Titulo</string>
    <string name="edit_price_hint">Precio</string>
    <string name="edit_desc_hint">Descripción</string>
    <string name="edit_ok_btn">Aceptar</string>
    <string name="edit_cance_btn">Cancelar</string>

    <string name="max_image">La publicacion tiene suficientes imagenes.</string>
    <string name="new_string_capture">Capturar</string>
    <string name="new_select_conten">Selecionar</string>

    <string name="base_url" formatted="false">http://191.232.33.81:8080/Oferfast_JAVA/</string>
    <string name="url_s" formatted="false">http://191.232.33.81:8080/Oferfast_JAVA/%s</string>
    <string name="url_s_d" formatted="false">http://191.232.33.81:8080/Oferfast_JAVA/%s/%d</string>
    <string name="url_s_d_s" formatted="false">http://191.232.33.81:8080/Oferfast_JAVA/%s/%d/%s</string>
    <string name="url_s_s" formatted="false">http://191.232.33.81:8080/Oferfast_JAVA/%s/%s</string>
    <string name="error_conect">Error de conexión, revise la conexión e intentelo más tarde</string>
    <string name="registro_btn" >Registrarse</string>
    <string name="et_hint_registro_username">Nombre de Usuario</string>
    <string name="et_hint_regisro_email">Email</string>
    <string name="et_hint_registro_pass">Contraseña</string>
    <string name="et_hint_registro_rpass">Repite Contraseña</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_Ofertas">Ofertas</string>
    <string name="txt_seguidores">Seguidores</string>
    <string name="txt_seguidos">Seguidos</string>
    <string name="et_hint_oldpass">Contraseña actual</string>
    <string name="et_hint_npass" >Nueva contraseña</string>
    <string name="et_hint_nrpass">Repita Contraseña</string>
    <string name="btn_chp_cancelar">Cancelar</string>
    <string name="btn_chp_open">Cambiar contraseña</string>
    <string name="btn_chp_ok">Aceptar</string>
    <string name="desc_logo">logo</string>

</resources>
