<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:background="@color/colorPrimary"
    android:windowSoftInputMode="adjustPan"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:id="@+id/linearLayout5"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_300"
            android:contentDescription="@string/desc_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/tvAppName"
            android:textSize="50sp"
            style="@style/AppName" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:visibility="gone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername_login"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_input_login"
            style="@style/InputLogin"
            android:autoText="false"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPass_login"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pass_input_login"
            style="@style/InputLogin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/no_acount_login"
            android:id="@+id/btnNoAccount"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp" />

    </LinearLayout>

</RelativeLayout>
