<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.tbd.tbd6.oferfas.View.ProfileFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:id="@+id/tvBiografia">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/ivFotoPerfil"
                    android:src="@mipmap/ic_launcher"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="\@username"
                    android:id="@+id/tvUsername"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="XXXX"
                            android:id="@+id/tvOfertas"
                            android:textStyle="bold"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_Ofertas"
                            android:id="@+id/textView4" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="XXXX"
                            android:id="@+id/tvSeguidores"
                            android:textStyle="bold"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_seguidores"
                            android:id="@+id/textView6" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="XXXX"
                            android:id="@+id/tvSeguidos"
                            android:textStyle="bold"
                            android:textSize="18dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_seguidos"
                            android:id="@+id/textView8" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/opass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/et_hint_oldpass"
            android:visibility="gone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/npass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/et_hint_npass"
            android:visibility="gone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/rnpass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/et_hint_nrpass"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_chp_ok"
                android:id="@+id/btnConfirmChange"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_chp_cancelar"
                android:id="@+id/btnCancelChange"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_chp_open"
                android:id="@+id/btnChangePass"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1" />
        </LinearLayout>

        <requestFocus
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <fragment
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:name="com.tbd.tbd6.oferfas.View.MisOfertasFragment"
            android:id="@+id/ofertas" />

    </LinearLayout>
</FrameLayout>
