<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tbd.tbd6.oferfas.View.RegistroActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo_300"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_registro"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="0dp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-10dp"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_below="@+id/pb_registro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-7dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_username"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_hint_registro_username"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_hint_regisro_email"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_pass"
                android:hint="@string/et_hint_registro_pass"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_rpass"
                android:layout_gravity="center_horizontal"
                android:hint="@string/et_hint_registro_rpass"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_btn"
                android:id="@+id/btn_registro"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="#ffffff"
                android:layout_gravity="center|right"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
