<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tbd.tbd6.oferfas.View.NewOfertaFragment">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/glCapturas"
                android:columnCount="4"
                android:background="#939393"
                android:minHeight="20dp">

            </GridLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:weightSum="1"
                android:gravity="center">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:id="@+id/ibFromCamera"
                    android:src="@drawable/ic_camera_alt"
                    android:theme="@style/TextAppearance.AppCompat.Button"
                    android:backgroundTint="@android:color/holo_green_dark" />

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:id="@+id/ibFromGallery"
                    android:theme="@style/TextAppearance.AppCompat.Button"
                    android:src="@drawable/ic_insert_photo"
                    android:backgroundTint="@android:color/holo_blue_dark" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etTitulo"
                    android:layout_weight="3"
                    android:hint="@string/edit_title_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:id="@+id/textView"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPrecio"
                    android:layout_weight="2"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:inputType="number"
                    android:hint="@string/edit_price_hint" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/etDesc"
                    android:maxLength="500"
                    android:minLines="2"
                    android:maxLines="4"
                    android:hint="@string/edit_desc_hint" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_ok_btn"
                    android:id="@+id/btnAceptar"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_cance_btn"
                    android:id="@+id/btnCancelar"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
